Fix z-index on cover upload label

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -100,6 +100,7 @@
   &.edit-menu {
     .edit-cover, .edit-avatar {
       display: block;
+      z-index: 99;
     }
   }
 
